Added Populate forms through Listview Item Click

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,7 +18,8 @@ Add project Links to homescreen when not on homescreen
 
 Home Screen //////////////////
 
-Button to  Show/Hide Form for new project
+Button to  Show/Hide Form for new project appears only on homescreen
+List of Project should have slide out form to update info and take notes
 
 projectSubject:string  ComboBox with Add Button
 projectType:string     ComboBox
